# devs-impacto

./: .env.example  .gitignore  .renderignore  CONTRIBUTING.md  DESENVOLVIMENTO.md  Dockerfile  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  Index.js  QUICK_START.md  README.md  TESTING.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  normalize_documents..py  package-lock.json  postprocess_text.py  pyproject.toml  render.yaml  seeds.py  seeds_onboarding.py  tsconfig.app.tsbuildinfo  tsconfig.node.json
backend/: .dockerignore  API_ENDPOINTS.md  CLOUDFLARE_R2_SETUP.md  DEPLOY.md  Dockerfile  GCS_SETUP_GUIDE.md  GOOGLE_CLOUD_SETUP.md  Makefile  R2_CORS_SETUP.md  R2_CREDENTIALS_SETUP.md  RAG_INGESTION_GUIDE.md  README.md  README_TESTS.md  TESTING_AI_FORMALIZATION.md  TESTING_FORMALIZATION.md  docker-compose.yml  download_pnae_sources_user.sh  import_data.py  pyproject.toml  run_tests.sh
backend/app/: __init__.py  main.py
backend/app/core/: config.py  errors.py
backend/app/modules/: __init__.py
backend/app/shared/: __init__.py  pagination.py  utils.py
backend/credentials/: .gitkeep
backend/data/: formalization_tasks.csv  onboarding_questions.csv
backend/data/rag_documents/: 003_LEI_N_11.947_DE_16_DE_JUNHO_DE_2009_Lei_da_Alimentao_Escolar_2009__Lei.doc  008_DECRETO_N_10.026_DE_25_DE_SETEMBRO_DE_2019__Decreto.htm  014_DECRETO_N_8.736_DE_3_DE_MAIO_DE_2016__Decreto.htm  (+7 more)
backend/scripts/: ingest_rag_documents.py  ingest_rag_manual.py  test_formalization.sh  test_user_diagnosis.py
backend/tests/: conftest.py  test_ai_chat.py  test_auth.py
(+242 files in other folders)
