[project]
name = "pnae-backend"
version = "0.1.0"
description = "Backend MVP para PNAE Simplificado - API para guiar pequenos produtores a vender para o PNAE via Chamada Pública"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "motor>=3.6.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.9.0",
    "python-multipart>=0.0.12",
    "reportlab>=4.2.0",
    "openai>=1.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
pdf = [
    "pdfplumber>=0.11.0",  # Para ingestão de PDFs no RAG
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "B008",  # Depends() in default arguments is standard FastAPI pattern
    "UP046", # Generic[T] is still valid and clearer in some cases
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
]
addopts = "-v --tb=short"



